# newsbro

./: .gitignore  README.md  flake.nix  justfile  requirements.txt
ansible/: README.md  (+2 more)
apps/port-front/: README.md  app.py  eslint.config.js  flake.nix  index.html  main.py  nginx.conf  package-lock.json  package.json  preprocessing.py  pyproject.toml  requirements.txt  styles.css  vite.config.js
apps/port-front/.streamlit/: config.prod.toml  config.toml
apps/port-front/admin/: admin.py
apps/port-front/login/: login.css  login.py  register.py
apps/port-front/main_pages/: admin_page.py
apps/port-front/register/: register.css  register.py
apps/port-front/src/: App.css  App.jsx  datadog.js  env.js  index.css  main.jsx
apps/port-front/src/api/: api.js
apps/port-front/src/api/articles/: README.md  package.json
apps/port-front/src/api/articles/.openapi-generator/: FILES
apps/port-front/src/api/articles/docs/: ArticlesApi.md  FeedbackApi.md  (+9 more)
apps/port-front/src/api/feed/: README.md  package.json
apps/port-front/src/api/users/: README.md  package.json
apps/port-front/src/assets/styles/: global.css
apps/port-front/src/components/: Article.jsx  ArticleModal.jsx  DashboardBreadcrumb.jsx  Footer.jsx  Navbar.jsx  RSS.jsx
apps/port-front/src/contexts/: Auth.jsx
apps/port-front/src/pages/: AdminPage.jsx  DashboardPage.jsx  FeedPage.jsx  HistoryPage.jsx  HomePage.jsx  LoginPage.jsx  NotFoundPage.jsx  RegisterPage.jsx  SearchPage.jsx  SettingsPage.jsx
apps/srvc-drift/: .env  .env.dev  Cargo.toml  Makefile  README.md  flake.nix  rustfmt.toml  test.sh
apps/srvc-drift/src/: config.rs  error.rs  health.rs  main.rs  schema.rs
apps/srvc-drift/src/drift/: calculator.rs
apps/srvc-drift/src/kafka/: consumer.rs  feedback_consumer.rs  inference_consumer.rs  mod.rs  models.rs
apps/srvc-drift/src/reporting/: discord.rs
apps/srvc-drift/src/storage/: mod.rs  models.rs  postgres.rs  qdrant.rs  redis.rs
apps/srvc-inference/: Dockerfile  docker-compose.yml  entrypoint.sh  flake.nix  lint.sh  pyproject.toml  server.py
apps/srvc-inference/abstract/: consumer.py  message.py  mlflow_model.py  model.py  producer.py
apps/srvc-inference/als/: .env  README.md  entrypoint.sh  main.py  requirements.txt
apps/srvc-inference/als/src/: article_consumer.py  config.py  feedback_consumer.py
apps/srvc-inference/als/src/model/: model.py  preprocessing.py  test.py  train.py
apps/srvc-inference/als/tests/: dummy.py
apps/srvc-inference/sbert/: .env  README.md  config.py  entrypoint.sh  main.py  model.py  requirements.txt
apps/srvc-inference/sbert/src/: article_consumer.py  config.py  feedback_consumer.py  model.py
apps/srvc-inference/sbert/src/model/: model.py  test.py  train.py
apps/srvc-inference/sbert/tests/: dummy.py
apps/srvc-inference/tf_idf/: .env  Dockerfile  Dockerfile.api  Dockerfile.consumer  README.md  api.py  article_consumer.py  config.py  docker-compose.yml  entrypoint.sh  feedback_consumer.py  main.py  model.py  requirements.txt  trigger
apps/srvc-inference/tf_idf/src/: article_consumer.py  config.py  feedback_consumer.py  model.py  recommend.py  recommendation_producer.py
apps/srvc-inference/tf_idf/src/model/: model.py  test.py  train.py
(+536 files in other folders)
