[project]
name = "port-front"
version = "0.1.0"
description = "Port Frontend for NewsBro Web App"
authors = [
    { name = "Maxim Bocquillion", email = "maxim.bocquillion@epita.fr" },
    { name = "Mateo Lelong", email = "mateo.lelong@epita.fr" },
    { name = "Samy Yacef", email = "samy.yacef@epita.fr" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
port-front = "app:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
