[package]
name = "srvc-drift"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

# HTTP server & webhooks
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

openssl-sys = "0.9.111"

uuid = "1.19.0"
qdrant-client = "1.16.0"

[dev-dependencies]
tokio-test = "0.4"
